fixed spacing issue on mobile

--- a/client/css/main.css
+++ b/client/css/main.css
@@ -246,6 +246,7 @@ section {
   border: 1px rgb(223, 223, 223) solid;
   border-radius: 5px;
   padding: 2%;
+  margin-top: 10%;
   box-shadow: 0 10px 15px #d6d6d6;
   outline: transparent;
   background: #fff;
@@ -327,6 +328,10 @@ p {
    #movie-list {
     grid-gap: 2.5%;
    }
+   
+  section {
+    margin-top: 0;
+  }
 }
 
 @media only screen and (min-width: 1024px) {
